k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: z2
  labels:
    name: z2
    app.kubernetes.io/name: z2
    app.kubernetes.io/part-of: z2-platform
